Updated BG->Kyiv. Fixed title styles
Updated BG->Kyiv. Fixed title styles

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -29,6 +29,16 @@ body {
     font-weight: 700;
 }
 
+h1, h3 {
+    color: white;
+    text-shadow: #333 2px 2px 0, #333 -2px -2px 0, #333 -2px 2px 0, #333 2px -2px 0;
+}
+
+h3>strong {
+    color: black;
+    text-shadow: none;
+}
+
 /* Custom Button Styles */
 
 .btn-dark {
