blog button styled

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -52,9 +52,8 @@
         <div class="text-vertical-center">
             <h1>Oleksandr Khotemskyi</h1>
             <h3>Software Development Engineer in Test</h3>
-            <a href="{{ site.baseurl }}/blog">Blog</a>
             <br>
-            <!--<a href="#about" class="btn btn-dark btn-lg">About me</a>-->
+            <a href="{{ site.baseurl }}/blog" class="btn btn-dark btn-lg">Blog</a>
         </div>
     </header>
     <!-- Footer -->
