--- a/_layouts/bloghome.html
+++ b/_layouts/bloghome.html
@@ -5,9 +5,8 @@ layout: default
 <div class="posts">
   {% for post in site.posts %}
     <article class="post">
-      <h1>Hello world</h1>
       <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-
+      <h4> {{ post.date | date_to_long_string }} </h4>
       <div class="entry">
         {{ post.excerpt }}
       </div>
