--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -18,10 +18,8 @@
     <meta property="og:description" content="Software Development Engineer in Test" />
     <meta property="og:site_name" content="Oleksandr Khotemskyi" />
 
-    <link rel="icon" type="image/x-icon" href="favicons/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" href="favicons/vores-l-tartan-sunday-best-152-213357.png">
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="favicons/vores-l-tartan-sunday-best-144-213357.png">
+    <link rel="icon" type="image/x-icon" href="/favicons/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/favicons/apple-touch-icon.png">
 
     <!-- Chrome, Firefox OS, Opera and Vivaldi -->
     <meta name="theme-color" content="#337ab7">
