--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -31,7 +31,7 @@ body {
 
 h1, h3 {
     color: white;
-    text-shadow: #333 2px 2px 0, #333 -2px -2px 0, #333 -2px 2px 0, #333 2px -2px 0;
+    text-shadow: 1px 0px 1px #000000, 0px 3px 4px #000000, 2px 1px 1px #000000
 }
 
 h3>strong {
