--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -64,10 +64,8 @@
                     </h3>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="skype:xatabu4">
-                                <i class="fab fa-skype fa-2x fa-fw"></i> xatabu4</a>
                             <a href="https://telegram.me/xotabu4">
-                                <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xatabu4</a>
+                                <i class="fab fa-telegram fa-2x fa-fw" aria-hidden="true"></i> @xatabu4 </a>
                             <a href="mailto:xotabu4@gmail.com">
                                 <i class="far fa-envelope fa-2x fa-fw"></i> xotabu4@gmail.com</a>
                         </li>
@@ -92,11 +90,6 @@
                         <li>
                             <a href="https://ua.linkedin.com/in/oleksandrkhotemskyi">
                                 <i class="fab fa-linkedin fa-fw fa-3x"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/OleksandrKhotemskyi/">
-                                <i class="fab fa-facebook fa-fw fa-3x"></i>
                             </a>
                         </li>
                         <li>
@@ -185,7 +178,7 @@
                                 Participating in different conferences, meetups, and other community meetings. Some of
                                 my speeches were uploaded to
                                 <strong><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
-                                        style="color:red;">YouTube</a></strong>
+                                        style="color:red;">YouTube</a></strong>. Subscribe to my YouTube channel!
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
