Fixes, removed FB

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -47,7 +47,7 @@
 <body>
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-center">
+        <div class="text-vertical-center" style="padding-top: 400px;">
             <h1>Oleksandr Khotemskyi</h1>
             <h3>Software Development Engineer in Test</h3>
             <br>
@@ -126,11 +126,10 @@
                                 <h4>
                                     <strong>Test automation</strong>
                                 </h4>
-                                <p>Using JavaScript/TypeScript, Python, Java. I used mostly Selenium-based tools
-                                    (Webdriver,
-                                    ProtractorJS, WebdriverIO, Selenide). Also i have experience with different tools
+                                <p>JavaScript/TypeScript, Python, Java. Huge experience with Selenium Webdriver-based tools
+                                    (ProtractorJS, WebdriverIO, Selenide) and Chrome DevTools based (Puppeteer, Playwright). Good experience with stack
                                     around
-                                    - Jenkins, Docker, NodeJS, NPM, pip and many others.</p>
+                                    - CI/CD systems, Reporting, Docker, Kubernetess, Test Farms, clouds, NodeJS, NPM and many others.</p>
                                 <!-- Commenting out for a while.  <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -158,11 +157,9 @@
                                     <i class="fa fa-graduation-cap fa-stack-1x text-primary"></i>
                                 </span>
                                 <h4>
-                                    <strong>Coaching</strong>
+                                    <strong>Teaching, mentoring and coaching</strong>
                                 </h4>
-                                <p>Teaching others how to do JS automation at Start-IT training center. Based on own
-                                    developed
-                                    teaching program.</p>
+                                <p>Sharing my knowledge in javascript automation on my courses and workshop. Also mentoring people, and bulding career development plans. Ping me if you are interested in private workshop/course!</p>
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
@@ -178,7 +175,7 @@
                                 Participating in different conferences, meetups, and other community meetings. Some of
                                 my speeches were uploaded to
                                 <strong><a href="https://www.youtube.com/playlist?list=PLEUkJQfJdxsTg4al8YrSVp4BxC4ds9biH"
-                                        style="color:red;">YouTube</a></strong>. Subscribe to my YouTube channel!
+                                        style="color:red;"><i class="fab fa-youtube fa-fw"></i> YouTube</a></strong>. Open to have a talk on your event!
                                 <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
